<resources>
    <string name="app_name">Messager</string>
    <string name="create_your_acc">Create your account:</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="have_account_text">Have an account already?</string>
    <string name="login_button">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="next_button">next</string>
    <string name="back_button">back</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_search">Search</string>
    <string name="add_contact">Add contact</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Minimum length is 6</string>
    <string name="error_incorrect_password">Password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_username">Username length minimum is 4</string>
    <string name="account_with_email_not_found">Account with this email not found</string>
    <!---->


    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <!--String related to menu-->
    <string name="nav_messages">Messages</string>
    <string name="nav_log_out">Log out</string>
    <!---->

    <!--String related to labels-->
    <string name="label_messages">Messages</string>
    <string name="label_search_contact">Search contact</string>
    <!---->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_add_contact">Add contact</string>
    <string name="nav_requests">Requests</string>
    <string name="label_requests">Requests</string>
    <!---->
</resources>
